# gym-ignition-models

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_cd.yml  style.yml
gym_ignition_extra_models/: __init__.py
gym_ignition_extra_models/Panda/: model.config
gym_ignition_extra_models/ground_plane/: ground_plane.sdf
gym_ignition_extra_models/iCubGazeboV2_5/: icub.urdf  model.config
gym_ignition_models/: __init__.py
gym_ignition_models/cartpole/: cartpole.urdf.xacro
gym_ignition_models/character/: character.urdf  model.config
gym_ignition_models/ground_plane/: ground_plane.sdf  model.config
gym_ignition_models/iCubGazeboSimpleCollisionsV2_5/: icub_simple_collisions.urdf  model.config
gym_ignition_models/iCubGazeboV2_5/: icub.urdf
gym_ignition_models/panda/: model.config  panda.urdf
gym_ignition_models/pendulum/: model.config  pendulum.urdf.xacro
src/gym_ignition_models/: __init__.py
src/gym_ignition_models/cartpole/: cartpole.urdf  model.config
src/gym_ignition_models/iCubGazeboSimpleCollisionsV2_5/: icub_simple_collisions.urdf
src/gym_ignition_models/pendulum/: pendulum.urdf
worlds/: cartpole.world  character.world  empty.world  iCubGazeboV2_5.world  panda.world  pendulum.world
