# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

[metadata]
name = gym_ignition_models
description = Collection of robot models for the Ignition Gazebo simulator.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
license_file = LICENSE
platforms = any
url = https://github.com/robotology/gym-ignition-models

project_urls =
    Changelog = https://github.com/robotology/gym-ignition-models/releases
    Tracker = https://github.com/robotology/gym-ignition-models/issues
    Source = https://github.com/robotology/gym-ignition-models

keywords =
    model
    description
    urdf
    sdf
    gazebo
    ignition
    robot
    robotics
    panda
    icub
    simulation

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Physics
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
gym_ignition_models =
    meshes/*.*
    meshes/**/*.*
    meshes/**/**/*.*
    */meshes/*.*
    */meshes/**/*.*
    */meshes/**/**/*.*
    */*.sdf
    */*.urdf
    */model.config
